Revert "Fix/pricing page dark mode"

--- a/src/app/body/curren-plan/curren-plan.component.css
+++ b/src/app/body/curren-plan/curren-plan.component.css
@@ -16,10 +16,6 @@
     line-height: 3rem;
 }
 
-.tableData{
-    color: var(--text);
-}
-
 .tablehead {
     color: #FFFFFF;
     font-size: 20px;
@@ -33,12 +29,12 @@
 #featureCard {
     background-color: #4042E2;
     border-top-left-radius: 20px 20px;
-    border-right: 6px solid var(--secondary-bg);
+    border-right: 6px solid #ffffff;
 }
 
 #basicCard {
     background-color: #00867D;
-    border-right: 3px solid var(--secondary-bg);
+    border-right: 3px solid #ffffff;
 }
 
 #upgradeButton{
@@ -59,7 +55,7 @@
 #entCard {
     background-color: #2368FF;
     border-top-right-radius: 20px 20px;
-    border-left: 6px solid var(--secondary-bg);
+    border-left: 6px solid #ffffff;
 }
 .table {
     border-radius: 20px;
@@ -105,11 +101,5 @@ td {
 @media only screen and (max-width: 600px) {
     #ebox {
         display: none;
-    }
-}
-
-@media (prefers-color-scheme: dark) { 
-    .heading1, .heading2{
-        color: var(--text);
     }
 }
